Revise latest update with personal message about Laura
Updated the latest update section with detailed information about Laura's condition and recovery process.

--- a/hospital-updates-with-admin.html
+++ b/hospital-updates-with-admin.html
@@ -589,7 +589,13 @@
             </div>
             <div id="latestUpdate" class="update-content">
                 <div class="update-date">Loading...</div>
-                <div class="update-text">Please wait while we load the latest information.</div>
+                <div class="update-text">First, let me (Rob) say thanks for all your prayers and concerns and I apologize that in general I have not been able to update family, friends, colleagues etc in a timely fashion. You probably know some of this, but tues jan 27th around 8 Laura was driving alone and turning from Park to Regent. A car blew through a red light and hit her, and then both of their cars crashed into other cars. Laura never lost consciousness, and a super helpful stranger opened her door and kept her calm until the police arrived, but she has a fractured pelvis, a couple of broken ribs, and some spinal processes fractured. Between being at the hospital for her, dealing with the aftermath, insurance, new car etc I’m gonna be pretty busy but a vague outline of the next few weeks/ months is emerging, as long as bumps on the road to recovery don’t arise….
+	Laura is at UW Hospital and currently, visitors are not yet appropriate. The many offers of food and help are not needed. She will soon transition to a rehab hospital likely UW East and then visitors are likely welcomed. Laura’s lab will update this “blog” and maintain a schedule of visitors. A few requests if you sign up to visit, but don’t feel “obligated” we appreciate your concern and know you guys care whether you visit or not.
+Check the blog the day of before you go…it might be updated to not come, or bring something specific…for example while Laura loves chocolate, she currently can’t tolerate anything sweet. Hopefully that will change…but hence the need to check the blog
+Currently keep visitors to 2 at a time and for < than an hour, again this may change
+I estimate she will be at the US rehab till  ~ feb 10th, and then home and need support until mid march maybe longer. Frankly, visits to our house 2222 kendall in the weeks after rehab maybe the most helpful. We have Oceane and Jonas living with us, so she will have some support, but Rob, Oceane and Jonas all have some responsibilities outside of the house so we can’t be with her 24/7.
+Finally, feel free to share the page with others and post here, Laura has a wide network of support inside and outside Madison and please don’t take offense if I didn’t share this blog with you personally right away. I appreciate all thoughts and comments:
+</div>
             </div>
         </div>
 
